--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "openwhisk"
   ],
   "dependencies": {
-    "openwhisk": "^3.11.0",
-    "clone": "^2.1.1"
+    "babel-core": "^6.26.0",
+    "clone": "^2.1.1",
+    "openwhisk": "^3.11.0"
   },
   "devDependencies": {
     "mocha": "^3.5.0"
